<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvTitle"
        android:textSize="@dimen/titleSize"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/topMarginTitle">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hintEtName"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:counterMaxLength="20"

        android:layout_marginTop="@dimen/topMargin"
        android:layout_marginStart="@dimen/leftMargin"
        android:layout_marginEnd="@dimen/rightRadius"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"

        app:boxCornerRadiusTopStart="@dimen/leftRadius"
        app:boxCornerRadiusTopEnd="@dimen/rightRadius"
        app:boxCornerRadiusBottomStart="@dimen/leftRadius"
        app:boxCornerRadiusBottomEnd="@dimen/rightRadius">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFechaNacimiento"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btnDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginStart="@dimen/leftMargin"
            android:layout_marginLeft="@dimen/leftMargin"
            android:layout_marginEnd="@dimen/rightMargin"
            android:layout_marginRight="@dimen/rightMargin"

            style="?android:spinnerStyle"
            android:text="@string/tvFechaNacimientoLovecraft"
            android:textColor="@color/colorBlack"
            android:onClick="openDatePicker"

           />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hintEtTel"
        app:endIconMode="clear_text"

        android:layout_marginStart="@dimen/leftMargin"
        android:layout_marginEnd="@dimen/rightRadius"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"

        app:boxCornerRadiusTopStart="@dimen/leftRadius"
        app:boxCornerRadiusTopEnd="@dimen/rightRadius"
        app:boxCornerRadiusBottomStart="@dimen/leftRadius"
        app:boxCornerRadiusBottomEnd="@dimen/rightRadius">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hintEtMail"
        app:helperTextEnabled="true"
        app:helperText="@string/helperMail"
        app:endIconMode="clear_text"

        android:layout_marginStart="@dimen/leftMargin"
        android:layout_marginEnd="@dimen/rightRadius"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"

        app:boxCornerRadiusTopStart="@dimen/leftRadius"
        app:boxCornerRadiusTopEnd="@dimen/rightRadius"
        app:boxCornerRadiusBottomStart="@dimen/leftRadius"
        app:boxCornerRadiusBottomEnd="@dimen/rightRadius">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hintEtDescription"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:endIconMode="clear_text"

        android:layout_marginStart="@dimen/leftMargin"
        android:layout_marginEnd="@dimen/rightRadius"
        android:layout_marginLeft="@dimen/leftMargin"
        android:layout_marginRight="@dimen/rightMargin"

        app:boxCornerRadiusTopStart="@dimen/leftRadius"
        app:boxCornerRadiusTopEnd="@dimen/rightRadius"
        app:boxCornerRadiusBottomStart="@dimen/leftRadius"
        app:boxCornerRadiusBottomEnd="@dimen/rightRadius">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNextText"
        android:textAllCaps="false"
        android:shadowColor="@color/colorBlack"
        android:layout_gravity="center"
        />

</LinearLayout>